# spbased-cli

./: Cargo.toml  Makefile.toml
scripts/new_migration/: Cargo.toml
scripts/new_migration/src/: main.rs
src/: interactions.rs  lib.rs  main.rs
src/interactions/: filepath_completer.rs
