[package]
name = "spbased-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
dirs = "5.0.1"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.86"
dialoguer = "0.11.0"
